--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -5,17 +5,12 @@
         <title>
             Probar el modelo
         </title>
-        <script src="./modelo.js"></script>
+        <script></script>
     </head>
 
     <body>
         <h2>probar el modelo</h2>
         <script>
-            miJuego=new Juego();
-            miJuego.agregarUsuario("pepe");
-            miJuego.agregarUsuario("luis");
-            usr1=miJuego.usuarios["pepe"];
-            usr2=miJuego.usuarios["pepe"];
         </script>
     </body>
 </html>
