--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -5,12 +5,15 @@
         <title>
             Probar el modelo
         </title>
-        <script></script>
+        <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+        <script src="./Cliente/clienteRest.js"></script>
     </head>
 
     <body>
         <h2>probar el modelo</h2>
         <script>
+            rest=new ClienteRest();
+
         </script>
     </body>
 </html>
