--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -19,21 +19,24 @@
 
     <body>
         <div class="container" style="margin-top:30px">
-            <div class="row">
-              <div class="col-sm-6">
+          <div class="row">
+            <div class="col">
                 <div id="agregarUsuario"></div>
               </div>
-              <div class="col-sm-6">
-              </div>
-              
+          </div>
+          <div class="row">
+            <div class="col-4">
+                <div id="crearPartida"></div>
             </div>
+            <div class="col-8">
+                <div id="listaPartidas"></div>
+            </div>
+          </div>
         </div>
-        
         <script>
             rest=new ClienteRest();
             iu=new ControlWeb();
             iu.mostrarAgregarUsuario();
-            //iu.mostrarHome();
         </script>
     </body>
 </html>
