--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -17,6 +17,7 @@
         <script src="./Cliente/clienteRest.js"></script>
         <script src="./Cliente/controlWeb.js"></script>
         <script src="./Cliente/clienteWS.js"></script>
+		<script src="./Cliente/tablero.js"></script>
         <link href="./Cliente/css/style.css"  rel="stylesheet" media="all"/>
     </head>
 
@@ -48,14 +49,7 @@
 			</ul>
 			</div>
 			<div class="col-8">
-				<div class="grid-container">
-					<h2>Tu flota</h2>
-					<div class="grid human-player"></div>
-				</div>
-				<div class="grid-container">
-					<h2>Flota enemiga</h2>
-					<div class="grid computer-player"></div>
-				</div>
+				
 			</div>
 		</div>
 		<div class="modal" id="miModal">
