--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -39,17 +39,11 @@
 
 		<div class="row">
 			<div class="col-4">
-                <h2>Barcos</h2>
-			<ul class="fleet-roster">
-				<li id="b2">Barco 2</li>
-				<li id="b4">Barco 4</li>
-				<li id="destroyer">Destroyer</li>
-				<li id="battleship">Battleship</li>
-				<li id="carrier">Aircraft Carrier</li>
-			</ul>
+               
+			
 			</div>
 			<div class="col-8">
-				
+				<div id="ancla"></div>
 			</div>
 		</div>
 		<div class="modal" id="miModal">
@@ -74,7 +68,7 @@
 			cws = new ClienteWS();
 			//iu.mostrarAgregarUsuario();
 			iu.comprobarCookie();
-			tablero=new Tablero();
+			tablero=new Tablero(10);
 		</script>
 </body>
 </html>
