--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -15,10 +15,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.3/socket.io.js" integrity="sha512-iWPnCISAd/J+ZacwV2mbNLCaPGRrRo5OS81lKTVPtRg1wGTC20Cfmp5Us5RcbLv42QLdbAWl0MI57yox5VecQg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="./cliente/clienteRest.js"></script>
-        <script src="./cliente/controlWeb.js"></script>
-        <script src="./cliente/clienteWS.js"></script>
-		<script src="./cliente/tablero.js"></script>
-        <link href="./cliente/css/style.css"  rel="stylesheet" media="all"/>
+        <script src="./controlWeb.js"></script>
+        <script src="./clienteWS.js"></script>
+		<script src="./tablero.js"></script>
+        <link href="./css/style.css"  rel="stylesheet" media="all"/>
     </head>
 
     <body>
